Adding some notes on example (#61)

--- a/template.html
+++ b/template.html
@@ -23,6 +23,7 @@
       <li>Item 2
       <li>Item 3
     </ul>
+    <details>Some notes. They are only visible using onstage shell.</details>
 </section>
 
 <section>
@@ -39,6 +40,7 @@
 <section>
     <h3>An image</h3>
     <img src="http://placekitten.com/g/800/600">
+    <details>Kittens are so cute!</details>
 </section>
 
 <section>
