--- a/template.html
+++ b/template.html
@@ -82,8 +82,8 @@
 
   q {
     display: inline-block;
-    width: 700px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
     background-color: black;
     color: white;
     font-size: 60px;
@@ -91,8 +91,8 @@
   }
 
   img, video {
-    width: 800px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     background-color: black;
@@ -164,7 +164,7 @@
 
 <!-- Default Style -->
 <style>
-  * { margin: 0; padding: 0; }
+  * { margin: 0; padding: 0; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
   details { display: none; }
   body {
     width: 800px; height: 600px;
