--- a/shells/onstage.html
+++ b/shells/onstage.html
@@ -205,8 +205,7 @@
     if (argv[0] === "CURSOR" && argc === 2) {
       if (aEvent.source === this.views.present) {
         var cursor = argv[1].split(".");
-        if (this.idx != ~~cursor[0])
-          this.postMsg(this.views.present, "GET_NOTES");
+        this.postMsg(this.views.present, "GET_NOTES");
         this.idx = ~~cursor[0];
         this.step = ~~cursor[1];
         $("#slideidx").innerHTML = argv[1];
@@ -214,7 +213,7 @@
         if (this.views.remote)
           this.postMsg(this.views.remote, "SET_CURSOR", argv[1]);
       } else {
-        $("#nextslideidx").innerHTML = argv[1];
+        $("#nextslideidx").innerHTML = (argv[1].charAt(0) !== "-") ? argv[1] : "END";
       }
     }
     if (aEvent.source === this.views.present) {
