file:///Users/dougsmith/Desktop/proposal.html

--- a/template.html
+++ b/template.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 
 <meta charset="utf-8">
-<title>The Title Of Your Presentation</title>
+<title>ASMR</title>
 
 <!-- Your Slides -->
 <!-- One section is one slide -->
 
 <section>
     <!-- This is the first slide -->
-    <h1>My Presentation</h1>
-    <footer>by John Doe</footer>
+    <h1>Autonomous Sensory Meridian Response</h1>
+    <footer>by Doug Smith</footer>
 </section>
 
 <section>
-    <p>Some random text: But I've never been to the moon! You can see how I lived before I met you. Also Zoidberg.
-    I could if you hadn't turned on the light and shut off my stereo.</p>
+    <p>ASMR is a euphoric physical sensation one receives from being the sole object of another person's attention.</p>
 </section>
 
 <section>
-    <h3>An incremental list</h3>
+    <h3>Data</h3>
     <ul class="incremental">
-      <li>Item 1
-      <li>Item 2
-      <li>Item 3
+      <li>Youtube Videos
+      <li>Reddit
+      <li>Questionnaires
     </ul>
-    <details>Some notes. They are only visible using onstage shell.</details>
+    <details>It is a real thing</details>
 </section>
 
 <section>
   <q>
-    Who's brave enough to fly into something we all keep calling a death sphere?
+    Professional Writing skills: Research/Grant proposals, Questionnaires, and many more
   </q>
 </section>
 
 <section>
-    <h2>Part two</h2>
+    <h2>Problem: ASMR has never been studied before. Solution: We study it</h2>
 </section>
-
 <section>
     <figure> <!-- Figures are used to display images and videos fullpage -->
       <img src="http://placekitten.com/g/800/600">
