--- a/template.html
+++ b/template.html
@@ -72,11 +72,10 @@
       font-size: 30px;
   }
 
-  .view section:after {
-    counter-increment: slideidx;
-    content: counter(slideidx, decimal-leading-zero);
-    position: absolute; bottom: -80px; right: 100px;
-    color: white;
+  section:before {
+    /* Enable the slides numbering by uncommenting below */
+    /* visibility: visible; */
+    /* content: counter(slideidx); */
   }
 
   .view head > title {
@@ -271,6 +270,18 @@
   }
   figure > img, figure > video {
     width: 100%; height: 100%;
+  }
+
+  section:before {
+    counter-increment: slideidx;
+    background: rgba(255, 255, 255, .7);
+    bottom: 5px;
+    position: absolute;
+    border-radius: 5px;
+    font-weight: bold;
+    left: 15px;
+    font-size: 25px;
+    padding: 2px 10px;
   }
 </style>
 
