Adding scrollIntoView when passing slides in outline mode

--- a/template.html
+++ b/template.html
@@ -545,6 +545,9 @@
     }
     if (next) {
       next.setAttribute("aria-selected", "true");
+      if (this.html.classList.contains("view")) {
+        next.scrollIntoView();
+      }
       var video = next.$("video");
       if (video && !!+this.params.autoplay) {
         video.play();
