--- a/template.html
+++ b/template.html
@@ -1,59 +1,184 @@
 <!DOCTYPE html>
-
+<script src=bubbles.js>
+</script>
 <meta charset="utf-8">
-<title>The Title Of Your Presentation</title>
+<title>Implémetation de fonctionnalités multimedia dans Firefox.</title>
 
 <!-- Your Slides -->
 <!-- One section is one slide -->
+<div id="header">
+    <a class="mozilla" href="http://www.mozilla.org/">visit <span>mozilla</span></a>
+</div>
 
 <section>
     <!-- This is the first slide -->
-    <h1>My Presentation</h1>
-    <footer>by John Doe</footer>
+    <h1>Implémentation de nouvelles fonctionnalitées multimedia dans Firefox</h1>
+    <img class=center src="/logo-only.png" width=300px height=300px>
+    <footer>Paul Adenot, INSA de Lyon, PFE, 2012</footer>
 </section>
 
 <section>
-    <p>Some random text: But I've never been to the moon! You can see how I lived before I met you. Also Zoidberg.
-    I could if you hadn't turned on the light and shut off my stereo.</p>
-</section>
-
-<section>
-    <h3>An incremental list</h3>
-    <ul class="incremental">
-      <li>Item 1
-      <li>Item 2
-      <li>Item 3
+    <h3>Travailler chez Mozilla, c'est:</h3>
+    <ul class="small incremental">
+      <li> Envoyer du code chez 500 millions de personnes, toutes les 6
+      semaines ;
+      <li> Travailler avec des personnes, payées ou non, de toutes les
+      nationalités et cultures ;
+      <li> Travailler en toute transparence, sur des projets complètement
+      ouverts ;
+      <li> Travailler avec les plus grandes entreprises mondiales pour faire
+      évoluer les standards et la plateforme ;
+      <li> Créer, au quotidient, le <b>futur</b> du Web.
     </ul>
-    <details>Some notes. They are only visible using onstage shell.</details>
 </section>
 
 <section>
-  <blockquote>
-    Who's brave enough to fly into something we all keep calling a death sphere?
-  </blockquote>
+      <video controls id=manifesto src="http://videos-cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm" poster="http://www.mozilla.org/images/about/poster.jpg"></video>
 </section>
 
 <section>
-    <h2>Part two</h2>
+<h3>Contexte: Le manifeste Mozilla</h3>
+<ul class="supersmall incremental">
+  <li>Internet fait partie intégrante de la vie moderne — il s'agit d'un composant clé dans
+  l'éducation, la communication, la collaboration, les affaires, le divertissement
+  et la société en général.</li>
+  <li>Internet est une ressource publique mondiale qui doit demeurer ouverte
+  et accessible.</li>
+  <li>Internet doit enrichir la vie de tout le
+  monde.</li>
+  <li>La sécurité des personnes sur Internet est fondamentale et ne peut pas être
+  considérée comme optionnelle.</li>
+  <li>Chacun doit avoir la possibilité de façonner son utilisation
+  d'Internet.</li>
+  <li>La réalité d'Internet en tant que ressource publique dépend de
+  l'interopérabilité (des protocoles, des formats de données, du contenu), de l'innovation
+  et d'une participation décentralisée mondiale.</li>
+  <li>Les logiciels libres et <i lang="en">open source</i> favorisent le développement
+  d'Internet comme ressource publique.</li>
+  <li>Des processus transparents et communautaires favorisent la participation,
+  la responsabilité et la confiance.</li>
+  <li>L'investissement commercial dans le développement d'Internet apporte de nombreux
+  bénéfices&nbsp;; un équilibre entre les objectifs commerciaux et l'intérêt public est
+  crucial.</li>
+  <li>L'amplification des aspects d'intérêt public d'Internet est un but
+  important, digne du temps, de l'attention et de l'investissement que l'on y consacre.</li>
+</ol>
 </section>
 
 <section>
-    <figure> <!-- Figures are used to display images and videos fullpage -->
-      <img src="http://placekitten.com/g/800/600">
-      <figcaption>An image</figcaption>
-    </figure>
-    <details>Kittens are so cute!</details>
+<h3> Contexte: Corporation? Foundation?</h3>
+ <ul>
+  <li> Mozilla Corporation n'est qu'une filliale de Mozilla Foundation.
+  <li> La majorité des employés sont employés de la MoCo.
+  <li> Bugdet d'environ $300M par an.
+  <li> 750 employés, des milliers de bénévoles.
+  <li> Firefox, mais pas que !
+ </ul>
 </section>
 
 <section>
-    <figure> <!-- Videos are automatically played -->
-      <video src="http://videos-cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm" poster="http://www.mozilla.org/images/about/poster.jpg"></video>
-      <figcaption>A video</figcaption>
-    </figure>
+  <h3>Contexte: mon rôle au sein du projet Mozilla</h3>
+  <ul class=incremental>
+    <li> Titre officiel: <em>Platform development intern</em> ;
+    <li> C, C++, Javascript, sur toute la pile technologique qui fait Firefox ;
+    <li> Implémentation de fonctionnalités, selon des spécifications ;
+    <li> Équipe en Nouvelle-Zélande, seule personne à Mountain View ;
+    <li> Un tuteur sur site, un manager a San Francisco (1h20 de train, environ
+    une fois par semaine) ;
+  </ul>
 </section>
 
 <section>
-    <h2>End!</h2>
+  <h3>Tout cela, avec beaucoup de gens, et tous à la fois</h3>
+  <ul class=incremental>
+    <li> Le projet ne s'arrête <strong>jamais</strong>
+    <li> Processus de travail relativement flexible, en évolution
+    <li> Jonglerie entre email, IRC, mailing lists, discussion de bureau, bug
+    tracker, etc.
+    <li> Profils très différent, relation avec des designer, traducteurs, autres
+    ingénieurs, etc.
+    <li> Communication <strong>omniprésente</strong>
+    <li> Parallelisation des tâches à outrance
+  <ul>
+</section>
+
+<section>
+<h3>Contexte: le navigateur internet de nos jours</h3>
+<ul class=incremental>
+  <li> Perte de vitesse des applications <em>natives</em> ;
+  <li> Applications web ≠ Site web.
+  <li> Besoin de hautes performances.
+  <li> Boot to Gecko: un OS basé sur les mêmes technologies.
+</ul>
+</section>
+
+<section>
+  <h3>Contexte industriel:</h3>
+  <ul>
+    <li> Google: Chrome (Webkit, V8)
+    <li> Apple: Safari (Webkit, Javascipt Core)
+    <li> Microsoft: Internet Explorer (Trident, Chakra)
+    <li> Opera Software: Opera (Presto, Carakan)
+    <li> Mozilla: Firefox (Gecko, Spidermonkey)
+  </ul>
+  <p>Course aux performances et au respect des standards.</p>
+  <p>Faire une implémentation de qualité, bien testée, qui respecte les
+  standards. Pas d'à peu près.</p>
+</section>
+
+
+<section>
+<h3>Un grand nombre de bug résolus pendant le stage!</h3>
+<iframe
+src="https://bugzilla.mozilla.org/buglist.cgi?list_id=4336892;resolution=FIXED;emailtype1=exact;query_format=advanced;emailassigned_to1=1;bug_status=RESOLVED;email1=paul%40paul.cx;component=Build%20Config;component=Canvas%3A%202D;component=Canvas%3A%20WebGL;component=Disability%20Access%20APIs;component=Document%20Navigation;component=DOM;component=DOM%3A%20Apps;component=DOM%3A%20Core%20%26%20HTML;component=DOM%3A%20CSS%20Object%20Model;component=DOM%3A%20Device%20Interfaces;component=DOM%3A%20Events;component=DOM%3A%20IndexedDB;component=DOM%3A%20Mozilla%20Extensions;component=DOM%3A%20Other;component=DOM%3A%20Traversal-Range;component=DOM%3A%20Validation;component=DOM%3A%20Workers;component=Drag%20and%20Drop;component=Editor;component=Embedding%3A%20APIs;component=Embedding%3A%20GRE%20Core;component=Embedding%3A%20Mac;component=Embedding%3A%20MFC%20Embed;component=Embedding%3A%20Packaging;component=Event%20Handling;component=File%20Handling;component=Find%20Backend;component=Gecko%20Profiler;component=General;component=Geolocation;component=GFX%3A%20Color%20Management;component=Graphics;component=Graphics%3A%20Layers;component=Graphics%3A%20Text;component=Hardware%20Abstraction%20Layer%20%28HAL%29;component=History%3A%20Global;component=HTML%3A%20Form%20Submission;component=HTML%3A%20Parser;component=Identity;component=Image%20Blocking;component=ImageLib;component=Installer%3A%20XPInstall%20Engine;component=Internationalization;component=IPC;component=Java%20to%20XPCOM%20Bridge;component=JavaScript%20Engine;component=jemalloc;component=js-ctypes;component=Keyboard%3A%20Navigation;component=Layout;component=Layout%3A%20Block%20and%20Inline;component=Layout%3A%20Floats;component=Layout%3A%20Form%20Controls;component=Layout%3A%20HTML%20Frames;component=Layout%3A%20Images;component=Layout%3A%20Misc%20Code;component=Layout%3A%20R%20%26%20A%20Pos;component=Layout%3A%20Tables;component=Layout%3A%20Text;component=Layout%3A%20View%20Rendering;component=Localization;component=MathML;component=MFBT;component=mozglue;component=Nanojit;component=Networking;component=Networking%3A%20Cache;component=Networking%3A%20Cookies;component=Networking%3A%20DNS;component=Networking%3A%20Domain%20Lists;component=Networking%3A%20File;component=Networking%3A%20FTP;component=Networking%3A%20HTTP;component=Networking%3A%20JAR;component=Networking%3A%20WebSockets;component=Plug-ins;component=Preferences%3A%20Backend;component=Print%20Preview;component=Printing%3A%20Output;component=Printing%3A%20Setup;component=Profile%3A%20BackEnd;component=Profile%3A%20Migration;component=Profile%3A%20Roaming;component=QuickLaunch%20%28AKA%20turbo%20mode%29;component=RDF;component=Rewriting%20and%20Analysis;component=Security;component=Security%3A%20CAPS;component=Security%3A%20PSM;component=Security%3A%20S%2FMIME;component=Security%3A%20UI;component=Selection;component=Serializers;component=Spelling%20checker;component=SQL;component=String;component=Style%20System%20%28CSS%29;component=SVG;component=Tracking;component=Video%2FAudio;component=Web%20Services;component=WebDAV;component=WebRTC;component=WebRTC%3A%20Audio%2FVideo;component=WebRTC%3A%20Networking;component=WebRTC%3A%20Signaling;component=Widget;component=Widget%3A%20Android;component=Widget%3A%20BeOS;component=Widget%3A%20Cocoa;component=Widget%3A%20Gonk;component=Widget%3A%20Gtk;component=Widget%3A%20OS%2F2;component=Widget%3A%20Photon;component=Widget%3A%20Qt;component=Widget%3A%20Win32;component=X-remote;component=XBL;component=XForms;component=XML;component=XP%20Toolkit%2FWidgets%3A%20Menus;component=XP%20Toolkit%2FWidgets%3A%20XUL;component=XPCOM;component=XPConnect;component=XSLT;component=XTF;component=XUL;product=Core">
+</iframe>
+</section>
+
+<section>
+  <h3>$ cd content/media</h3>
+  <ul class=incremental>
+    <li> Beaucoup de threads
+    <li> Beaucoup de code
+    <li> Beaucoup de cas d'usage
+    <li> Beaucoup de cas particuliers
+    <li> Spécification relativement complexe
+  <ul>
+</section>
+
+<section>
+  <h3>&lt;audio&gt;, &lt;video&gt</h3>
+  <video controls src=http://mirror.cessen.com/blender.org/peach/trailer/trailer_400p.ogg width=200>
+</section>
+
+<section>
+  <h3>&lt;audio&gt;, &lt;video&gt</h3>
+  <video class=rotate controls
+  src=http://mirror.cessen.com/blender.org/peach/trailer/trailer_400p.ogg
+  width=200> </video>
+  <p>Des contraintes un peu plus grandes qu'un lecteur traditionel :-)</p>
+</section>
+
+<section>
+<h3> Possibilités assez grandes</h3>
+<ul>
+  <li> Lecture normale
+  <li> Modification de la vitesse de lecture
+  <li> Source temps réel (webtv, webcam)
+  <li> Modification du flux en temps réel
+  <li> Communication peer to peer
+  <li> Génération de vidéo/audio en temps réel
+</ul>
+</section>
+
+<section>
+<h3> Fonctionnalités implémentés </h3>
+  <ul>
+    <li> Playback rate
+    <li> &lt;video media="min-width(500px)"&gt;
+    <li> Binary sniffing
+    <li> Gradient caching
+    <li> Box blur
+  </ul>
 </section>
 
 <!-- Your Style -->
@@ -71,6 +196,58 @@
       font-family: 'Oswald', arial, serif;
       font-size: 30px;
   }
+
+  .rotate {
+    height: 50%;
+      box-shadow: 0px 0px 30px black;
+      border-radius: 30px;
+      -moz-transition: all 3s ease-in;
+      transform-style: preserve-3d;
+      -moz-perspective: 800px;
+      -moz-perspective-origin: 50% 50%;
+  }
+
+  .rotate:hover {
+    -moz-transition: all 3s ease-in;
+     -moz-transform: rotateY(-1800deg) rotateX(180deg);
+  }
+
+  .subtitles {
+    text-align:center;
+    color: white;
+    position: absolute;
+    bottom: 33px;
+    left: 30px;
+  }
+
+  .bubblesContainer {
+    background: black;
+    height: 100%;
+    z-index: 4;
+  }
+
+  a.mozilla {
+    position: relative;
+    float: right;
+    display: block;
+    height: 49px;
+    width: 118px;
+    background: url(mozilla-tab.png) 100% 0 no-repeat;
+    text-indent: -200px;
+    overflow: hidden;
+    margin-right: 20px;
+  }
+
+  .small {
+    margin: 2em 2em;
+    font-size: normal;
+  }
+
+  .supersmall {
+    margin: 2em 2em;
+    font-size: 18px;
+  }
+
 
   .view section:after {
     counter-increment: slideidx;
@@ -91,22 +268,27 @@
     margin: 1em 0 1em 0;
   }
 
+  .center {
+    display: block;
+    margin: 0px auto;
+  }
+
   h1, h2 {
     margin-top: 200px;
     text-align: center;
-    font-size: 80px;
+    font-size: 40px;
   }
   h3 {
-    margin: 100px 0 50px 100px;
+    margin: 0em 1em;
   }
 
   ul {
-      margin: 50px 200px;
+      margin: 2em 2em;
   }
 
   p {
-    margin: 75px;
-    font-size: 50px;
+    margin: 35px 45px;
+    font-size: 30px;
   }
 
   blockquote {
@@ -121,16 +303,6 @@
   }
   blockquote:after {
     content: close-quote;
-  }
-
-  /* Figures are displayed full-page, with the caption
-     on top of the image/video */
-  figure {
-    background-color: black;
-  }
-  figcaption {
-    margin: 70px;
-    font-size: 50px;
   }
 
   footer {
@@ -188,6 +360,10 @@
   #progress-bar {
     height: 2px;
     background: #AAA;
+  }
+  iframe {
+    width: 100%;
+    height: 80%;
   }
 </style>
 
@@ -268,14 +444,14 @@
   .view #progress-bar {
     display: none;
   }
-  figure {
+  xfigure {
     width: 100%;
     height: 100%;
   }
   figure > * {
     position: absolute;
   }
-  figure > img, figure > video {
+  video {
     width: 100%; height: 100%;
   }
 
@@ -315,6 +491,15 @@
     this.setupTouchEvents();
     this.onresize();
     this.setupView();
+    vid = new Bubbles.video("manifesto")
+    vid.subtitles( false, {
+    "French" : {
+      language  : "French",
+      file    : "french.srt"
+    }
+  }
+);
+
   }
 
   Dz.setupParams = function() {
