On stage shell: Scroll when notes overflow.

--- a/shells/onstage.html
+++ b/shells/onstage.html
@@ -63,9 +63,10 @@
     font-size: 30px;
     height: 226px;
     left: 0;
-    padding: 0 240px 0 20px;
+    padding: 0 250px 0 20px;
     position: absolute;
     right: 0;
+    overflow: auto;
   }
 
   #time {
@@ -77,7 +78,7 @@
     font-weight: bold;
     height: 52px;
     line-height: 52px;
-    right: 20px;
+    right: 30px;
     position: absolute;
     text-align: center;
     width: 200px;
@@ -130,7 +131,7 @@
     border-top: 4px solid #555;
     bottom: 174px;
     width: 200px;
-    right: 20px;
+    right: 30px;
   }
 
   #popup-button {
@@ -144,7 +145,7 @@
     font-size: 30px;
     font-weight: bold;
     position: absolute;
-    right: 20px;
+    right: 30px;
     width: 200px;
     z-index: 10;
   }
