Fix typo on line 414

--- a/template.html
+++ b/template.html
@@ -411,7 +411,7 @@
 
   Dz.getNotes = function(aIdx) {
     var s = $("section:nth-of-type(" + aIdx + ")");
-    var d = s.$("[role='note'");
+    var d = s.$("[role='note']");
     return d ? d.innerHTML : "";
   }
 
