Fixed attribute on closing tag (duh) and typo

--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
       <li>Item 2
       <li>Item 3
     </ul>
-    <div role="note">s>Some notes. They are only visible using onstage shell.</div role="note">
+    <div role="note">Some notes. They are only visible using onstage shell.</div>
 </section>
 
 <section>
@@ -42,7 +42,7 @@
       <img src="http://placekitten.com/g/800/600">
       <figcaption>An image</figcaption>
     </figure>
-    <div role="note">Kittens are so cute!</div role="note">
+    <div role="note">Kittens are so cute!</div>
 </section>
 
 <section>
