--- a/shells/embedder+notes.html
+++ b/shells/embedder+notes.html
@@ -6,6 +6,9 @@
 <div id="slides">
   <iframe allowfullscreen mozallowfullscreen webkitallowfullscreen></iframe>
 </div>
+<div id="notes">
+  <p id="content"></p>
+</div>
 <div id="controls">
   <button title="prev" id="back" onclick="Dz.back()">&#9664;</button>
   <button title="next" id="forward" onclick="Dz.forward()">&#9654;</button>
@@ -23,7 +26,7 @@
     height: 100%;
     width: 100%;
   }
-  #slides, #controls {
+  #slides, #controls, #notes {
     left: 0;
     position: absolute;
     right: 0;
@@ -36,8 +39,20 @@
     padding: 5px;
   }
   #slides {
-    bottom: 40px;
+    bottom: 206px;
     top: 0;
+  }
+  #notes {
+    bottom: 40px;
+    height: 150px;
+
+    background: #EEE;
+    color: #444;
+    padding: 0 20px;
+    overflow: auto;
+    font: 25px sans-serif;
+    border: 8px solid #555;
+    border-style: solid none;
   }
   iframe {
     border: none;
@@ -149,6 +164,7 @@
       argv.forEach(function(e, i, a) { a[i] = decodeURIComponent(e) });
       if (argv[0] === "CURSOR" && argc === 2) {
         var cursor = argv[1].split(".");
+        this.postMsg(this.view, "GET_NOTES");
         this.idx = ~~cursor[0];
         this.step = ~~cursor[1];
         $("#slideidx").value = this.idx;
@@ -158,6 +174,9 @@
       if (argv[0] === "REGISTERED" && argc === 3) {
         $("#slidecount").innerHTML = this.count = argv[2];
         document.title = argv[1];
+      }
+      if (argv[0] === "NOTES" && argc === 2) {
+        $("#notes > #content").innerHTML = this.notes = argv[1];
       }
     }
   }
