--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
       <li>Item 2
       <li>Item 3
     </ul>
-    <details>Some notes. They are only visible using onstage shell.</details>
+    <details>Some notes. They are only visible using onstage or embedder+notes shell.</details>
 </section>
 
 <section>
