separated animations from slides' styling

--- a/template.html
+++ b/template.html
@@ -149,12 +149,14 @@
     background-color: #F3F4F8;
     border-top: 1px solid #CCC;
   }
+</style>
 
   /* Transition effect */
   /* Feel free to change the transition effect for original
      animations. See here:
      https://developer.mozilla.org/en/CSS/CSS_transitions
      How to use CSS3 Transitions: */
+<style>
   section {
     -moz-transition: left 400ms linear 0s;
     -webkit-transition: left 400ms linear 0s;
