Don't intercept keyboard events in inputs.

--- a/template.html
+++ b/template.html
@@ -328,6 +328,11 @@
       || aEvent.shiftKey) {
       return;
     }
+    // Don't intercept whether an input has the focus
+    if ( $(':focus') instanceof HTMLInputElement
+      && aEvent.keyCode != 13) {
+      return;
+    }
     if ( aEvent.keyCode == 37 // left arrow
       || aEvent.keyCode == 38 // up arrow
       || aEvent.keyCode == 33 // page up
