Bugfix. That broke onstage shell.

--- a/template.html
+++ b/template.html
@@ -620,7 +620,7 @@
     if (next) {
       next.setAttribute('active', true);
     } else {
-      setCursor(this.idx, 0);
+      this.setCursor(this.idx, 0);
     }
     return next;
   }
